# smartrefrig

./: CMakeLists.txt  domain.c  main.c  repository.c  repository.h  vector.c  vector.h
src/: main.c
src/controller/: controller.c  controller.h
src/domain/: product.c  product.h  undo.c  undo.h  vector.c  vector.h
src/repository/: repository.c  repository.h
src/ui/: console.c  console.h
src/utils/: vector.c  vector.h
tests/: tests_main.c
tests/controller/: tests_controller.c
tests/domain/: tests_product.c
tests/framework/: testsHelper.c  testsHelper.h
tests/repository/: tests_repository.c
tests/utils/: tests_vector.c
